DLL/ZetaAPI.pas


  TraceLn ('--- Setting up');
  SetupEngineCreator (AProgConfig,
    TZbCallbackFunction (lpfnCreateUICallback),
    TZbCallbackFunction (lpfnHandleEventCallback));

  TraceLn ('--- Initializing');
  ZbLib_AppFrame_Init (hInstance, FALSE, NIL, AWinTitle);
  AttachToAppFrame;

  TraceLn ('--- Ready to run');
  ZbLib_AppFrame_Run;
  ZbLib_AppFrame_Done;
  TraceLn ('ZETA_Run() - EXIT');
end;

///////////////////////------------------------------------------------------
function ZEWW_Prepare (lpszConfigFile: PChar; lpfnCreateUICallback: tCALLBACK;
  lpfnHandleEventCallback: tCALLBACK): integer; stdcall;
begin
  {
  Result := Integer (WrapperCreate (String (lpszConfigFile),
    TZbCallbackFunction (lpfnCreateUICallback),
    TZbCallbackFunction (lpfnHandleEventCallback)));}
  SetupEngineCreator (lpszConfigFile,
    TZbCallbackFunction (lpfnCreateUICallback),
    TZbCallbackFunction (lpfnHandleEventCallback));
  Result := 1975;
end;

///////////////////////------------------------------------------------------
function ZEWW_CreateWindow (ClassRef: integer; hInstance: HINST;
  WindowClassName, WindowTitle: PChar; WindowProc: tCALLBACK;
  WindowFlags: DWORD; iWidth, iHeight: integer): tINTBOOL; stdcall;
{var
  Wrapper: TZEWindowsWrapper;}
begin
  ZbLib_AppFrame_Init (hInstance);//, FALSE, WindowClassName, WindowTitle, iWidth, iHeight);
  Result := IBOOL_TRUE;
  {
  Result := IBOOL_FALSE;
  Wrapper := TZEWindowsWrapper (ClassRef);
  if (Wrapper = NIL) then Exit;
  //
  Result := IBOOL [Wrapper.CreateWindow (hInstance, WindowClassName, WindowTitle,
    TWindowsCallback (WindowProc), WindowFlags, iWidth, iHeight)];}
end;

///////////////////////------------------------------------------------------
procedure ZEWW_Execute (ClassRef: integer); stdcall;
begin
  AttachToAppFrame;
  ZbLib_AppFrame_Run;
  {
  if (ClassRef <> 0) then try
    TZEWindowsWrapper (ClassRef).Execute;
  except end;}
end;

///////////////////////------------------------------------------------------
procedure ZEWW_Shutdown (ClassRef: integer); stdcall;
begin
  ZbLib_AppFrame_Done;
  {
  if (ClassRef <> 0) then try
    TZEWindowsWrapper (ClassRef).Free;
  except end;}
end;


///////////////////////------------------------------------------------------
function ZEE_Initialize (lpszConfigurationFile: PChar;
  hHostWindow: HWND; hAppInstance: HINST): tINTBOOL; stdcall;
begin
  if (CoreEngine = NIL) then begin
    CoreEngine := TZEGameCore.Create (string (lpszConfigurationFile));
    CoreEngine.Initialize (hHostWindow, hAppInstance);
  end;
  Result := IBOOL [(CoreEngine <> NIL) AND (CoreEngine.Ready)];
end;

///////////////////////------------------------------------------------------
procedure ZEE_Shutdown; stdcall;
begin
  if (CoreEngine <> NIL) then FreeAndNIL (CoreEngine);
end;

///////////////////////------------------------------------------------------
procedure ZEE_TerminateSelf; stdcall;
begin
  PostQuitMessage (0);
end;

///////////////////////------------------------------------------------------
procedure ZEE_TerminateEngine; stdcall;
begin
  g_EventManager.Commands.Insert (cmGlobalExitFinal, 0, 0);
  //  if (CoreEngine <> NIL) then CoreEngine.Terminate;
end;

///////////////////////------------------------------------------------------
procedure ZEE_Activate; stdcall;
begin
  if (CoreEngine <> NIL) then CoreEngine.Activate;
end;

///////////////////////------------------------------------------------------
procedure ZEE_Deactivate; stdcall;
begin
  if (CoreEngine <> NIL) then CoreEngine.Deactivate;
end;

///////////////////////------------------------------------------------------
function ZEE_Refresh: tINTBOOL; stdcall;
begin
  Result := IBOOL_TRUE;
  if (CoreEngine = NIL) then Exit;
  Result := IBOOL [CoreEngine.Refresh];
end;

///////////////////////------------------------------------------------------
procedure ZEE_PushEvent (EventCommand: Integer); stdcall;
begin
  g_EventManager.Commands.Insert (EventCommand, 0, 0);
end;

///////////////////////------------------------------------------------------
procedure ZEE_AddCallback (AName: PChar; ACallback: tCALLBACK); stdcall;
begin
  Callbacks.Add (AName, TZbCallbackFunction (ACallback));
end;

///////////////////////------------------------------------------------------
function ZEE_ScreenWidth: integer; stdcall;
begin
  Result := IfThen (CoreEngine = NIL, 0, CoreEngine.ScreenWidth);
end;

///////////////////////------------------------------------------------------
function ZEE_ScreenHeight: integer; stdcall;
begin
  Result := IfThen (CoreEngine = NIL, 0, CoreEngine.ScreenHeight);
end;

///////////////////////------------------------------------------------------
function ZEE_ScreenColorDepth: integer; stdcall;
begin
  Result := IfThen (CoreEngine = NIL, 0, CoreEngine.ScreenDepth);
end;

///////////////////////------------------------------------------------------
procedure ZEE_SetMusic (lpszMusicName: PChar); stdcall;
begin
  if (CoreEngine <> NIL) then CoreEngine.SetBackgroundMusic (lpszMusicName);
end;

///////////////////////------------------------------------------------------
procedure ZEE_ClearMusic; stdcall;
begin
  if (CoreEngine <> NIL) then CoreEngine.ClearBackgroundMusic;
end;

///////////////////////------------------------------------------------------
procedure ZEE_PlaySound (lpszSoundName: PChar); stdcall;
begin
  if (CoreEngine <> NIL) then CoreEngine.PlaySound (lpszSoundName);
end;

///////////////////////------------------------------------------------------
procedure ZEE_PlayCutScene (lpszCutSceneFile: PChar); stdcall;
begin
  if (CoreEngine <> NIL) then CoreEngine.PlayCutScene (lpszCutSceneFile);
end;

///////////////////////------------------------------------------------------
procedure ZEE_TogglePause (ibActive: tINTBOOL); stdcall;
begin
  GameWorld.Paused := (ibActive <> IBOOL_FALSE);
end;

///////////////////////------------------------------------------------------
function ZEE_IsMusicActive: tINTBOOL; stdcall;
begin
  if (CoreEngine <> NIL) then
    Result := IBOOL [CoreEngine.Music]
    else Result := IBOOL_FALSE;
end;

///////////////////////------------------------------------------------------
procedure ZEE_ToggleMusic (ibActive: tINTBOOL); stdcall;
begin
  if (CoreEngine <> NIL) then CoreEngine.Music := (ibActive <> IBOOL_FALSE);
end;

///////////////////////------------------------------------------------------
function ZEE_IsSoundActive: tINTBOOL; stdcall;
begin
  if (CoreEngine <> NIL) then
    Result := IBOOL [CoreEngine.SoundFX]
    else Result := IBOOL_FALSE;
end;

///////////////////////------------------------------------------------------
procedure ZEE_ToggleSound (ibActive: tINTBOOL); stdcall;
begin
  if (CoreEngine <> NIL) then CoreEngine.SoundFX := (ibActive <> IBOOL_FALSE);
end;

///////////////////////------------------------------------------------------
procedure ZEE_ToggleFPSDisplay (ibVisible: tINTBOOL); stdcall;
begin
  if (CoreEngine <> NIL) then CoreEngine.FPSVisible := (ibVisible <> IBOOL_FALSE);
end;

///////////////////////------------------------------------------------------
procedure ZEE_StartTimer (ATimerValue: Cardinal); stdcall;
begin
  CoreEngine.StartCountdownTimer (ATimerValue);
end;

///////////////////////------------------------------------------------------
procedure ZEE_StartTimerEx (AMinutes, ASeconds: Cardinal); stdcall;
begin
  CoreEngine.StartCountdownTimer (AMinutes, ASeconds);
end;

///////////////////////------------------------------------------------------
procedure ZEE_PauseTimer; stdcall;
begin
  TraceLn ('ZEE_PauseTimer ()');
  CoreEngine.PauseTimer;
end;

///////////////////////------------------------------------------------------
procedure ZEE_UnPauseTimer; stdcall;
begin
  TraceLn ('ZEE_UnPauseTimer ()');
  CoreEngine.UnPauseTimer;
end;

///////////////////////------------------------------------------------------
procedure ZEE_StopTimer; stdcall;
begin
  CoreEngine.StopTimer;
end;

///////////////////////------------------------------------------------------
function ZEE_IsGlobalExitOnEscapeSet: tINTBOOL; stdcall;
begin
  Result := IBOOL [g_ExitOnEscape];
end;

///////////////////////------------------------------------------------------
procedure ZEE_ToggleGlobalExitOnEscape (ibActive: tINTBOOL); stdcall;
begin
  g_ExitOnEscape := (ibActive <> IBOOL_FALSE);
end;

///////////////////////------------------------------------------------------
function ZEE_CmpStr (Ref, pCmp: PChar): Integer; stdcall;
begin
  Result := Ord (StrComp (Ref, pCmp) = 0);
end;

///////////////////////------------------------------------------------------
procedure ZEE_AddKeyHook (KeyCode, UserHandler: Integer); stdcall;
begin
  g_EventManager.Keyboard.AddKeyHook (TZbKeyCallback(UserHandler), KeyCode, 0);
end;

///////////////////////------------------------------------------------------
procedure ZEE_ClearKeyHook (KeyCode: Integer); stdcall;
begin
  g_EventManager.Keyboard.AddKeyHook (NIL, KeyCode, 0);
end;

///////////////////////------------------------------------------------------
function ZEE_GetElapsedTicks: Integer; stdcall;
begin
  Result := Integer (g_ElapsedTicks);
end;

///////////////////////------------------------------------------------------
function ZEE_GetMouseX: Integer; stdcall;
begin
  Result := g_EventManager.Mouse.GetPositionX;
end;

///////////////////////------------------------------------------------------
function ZEE_GetMouseY: Integer; stdcall;
begin
  Result := g_EventManager.Mouse.GetPositionY;
end;

///////////////////////------------------------------------------------------
procedure ZEE_DebugText (lpText: PChar); stdcall;
begin
  TraceLn ('ZEE {%s}', [String(lpText)]);
end;

///////////////////////------------------------------------------------------
function ZEE_CopyPChar (pSource, pDest: PChar; nDestLen: Integer): Integer; stdcall;
begin
  Result := StrLen (pSource);
  StrLCopy (pDest, pSource, nDestLen);
end;

///////////////////////------------------------------------------------------
function ZEF_FileExists (FileName: PChar; Ext: PChar): Integer; stdcall;
var
  cFileName: String;
begin
  cFileName := String (FileName) + String (Ext);
  Result := Ord (FileExists (cFileName));
end;

///////////////////////------------------------------------------------------
procedure ZEF_DeleteFile (FileName: PChar; Ext: PChar); stdcall;
var
  cFileName: String;
begin
  try
    cFileName := String (FileName) + String (Ext);
    SysUtils.DeleteFile (cFileName);
  except
  end;
end;

///////////////////////------------------------------------------------------
procedure ZEF_CreateFile (FileName: PChar; Ext: PChar); stdcall;
var
  cFileName: String;
  F: File;
begin
  cFileName := String (FileName) + String (Ext);
  AssignFile (F, cFileName);
  Rewrite (F);
  CloseFile (F);
end;

///////////////////////------------------------------------------------------
function ZEF_OpenFile (FileName, Ext: PChar): Integer; stdcall;
var
  cName: String;
begin
  cName := String (FileName);
  if (Ext <> NIL) AND (StrLen (Ext) > 0) then cName := cName + String (Ext);
  Result := CreateFile (PChar (cName), GENERIC_READ OR GENERIC_WRITE, 0,
    NIL, OPEN_EXISTING, FILE_ATTRIBUTE_NORMAL, 0);
end;

///////////////////////------------------------------------------------------
procedure ZEF_CloseFile (hFile: Integer); stdcall;
begin
  try
    CloseHandle (hFile);
  except
  end;
end;

///////////////////////------------------------------------------------------
procedure ZEF_WriteToFileI (hFile, Data: Integer); stdcall;
var
  dData, dSizeToWrite, dSizeWritten: Cardinal;
begin
  dData := Cardinal (Data);
  dSizeToWrite := SizeOf (dData);
  WriteFile (hFile, dData, dSizeToWrite, dSizeWritten, NIL);
end;
